minor fixes and Scrollbar Removed

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,25 @@ section#hero {
 }
 
 
+/* HIDE SCROLL BARS
+-------------------------------------------------- */
+::-webkit-scrollbar
+{
+  width: 0px;  /* for vertical scrollbars */
+  height: 0px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0);
+}
+
+
 /* TABLET DEVICES
 -------------------------------------------------- */
 
